Revert "fix actuality alignment"

--- a/private/src/styles/pages/article/type/_chronicle.scss
+++ b/private/src/styles/pages/article/type/_chronicle.scss
@@ -1,9 +1,6 @@
 .article.chroniques {
   .article-meta {
     padding: 0 24px;
-    max-width: $container-lg;
-    margin-left: auto;
-    margin-right: auto;
 
     @media (min-width: 768px) {
       padding: 0;
@@ -64,21 +61,11 @@
       margin-right: auto;
     }
 
-    .call-to-action-block {
+    .call-to-action-block,
+    .wp-block-amnesty-core-chapo {
       max-width: $container-lg;
       margin-left: auto;
       margin-right: auto;
-    }
-
-    .wp-block-amnesty-core-chapo {
-      max-width: $container-hg;
-      margin-left: auto;
-      margin-right: auto;
-
-      .text {
-        width: 50%;
-        margin-left: 20%;
-      }
     }
 
     .carousel-block {
